added header element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Link to CSS file-->
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
 <body>
+    <header class="header_1"><h1>First Visual Studio Code Project</h1></header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">First VS Code Project</a>
@@ -27,5 +28,6 @@
           </div>
         </div>
       </nav>
+
 </body>
 </html>
