first draft of the files

--- a/about.html
+++ b/about.html
@@ -27,6 +27,14 @@
             </div>
           </div>
         </div>
-      </nav>
+    </nav>
+
+    <main class="main">
+        
+    </main>
+
+    <footer class="footer">
+        <h5>Created by Aliaksandr</h5>
+    </footer>
 </body>
 </html>
