--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header_1"><h1>First Visual Studio Code Project</h1></header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">First VS Code Project</a>
+          <a class="navbar-brand" href="#">First Visual Studio Code Project</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,20 @@
             </div>
           </div>
         </div>
-      </nav>
+    </nav>
+    
+    <main class="main">
+        <h1 class="header_2">Couple stock pictures</h1>
+        <div class="flex-container">
+            <img src="https://images.unsplash.com/photo-1623676560096-fa1585052898?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Clouds Image"/>
+            <img src="https://images.unsplash.com/photo-1623750340678-4cdf9cbbac53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Bridge Image"/>
+            <img src="https://images.unsplash.com/photo-1623765178363-cc6423013e17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjB8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Historical Building Image"/>
 
+        </div>
+    </main>
+
+    <footer class="footer">
+        <h5>Created by Aliaksandr</h5>
+    </footer>
 </body>
 </html>
