added pictures and containers

--- a/about.html
+++ b/about.html
@@ -23,14 +23,29 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="about.html">About</a>
-              
             </div>
           </div>
         </div>
     </nav>
 
     <main class="main">
-        
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <img src="resources/images/donald_duck.jpg"/>
+              </div>
+              <div class="col">
+                <img src="resources/images/donald_duck.jpg"/>
+              </div>
+              <div class="col">
+                <img src="resources/images/donald_duck.jpg"/>
+              </div>
+              <div class="col">
+                <img src="resources/images/donald_duck.jpg"/>
+              </div>
+            </div>
+            <p class="main_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis molestias dolore, qui nam itaque aliquam labore ducimus, iusto placeat vel delectus rem deleniti ut quis tenetur et. Odio, corporis unde? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam ut odit, blanditiis suscipit officia, commodi veniam sapiente fuga voluptatem cum dolores mollitia magnam. Quibusdam assumenda impedit itaque hic totam quis.</p>
+          </div>
     </main>
 
     <footer class="footer">
