--- a/index.html
+++ b/index.html
@@ -31,12 +31,35 @@
     
     <main class="main">
         <h1 class="header_2">Couple stock pictures</h1>
-        <div class="flex-container">
-            <img src="https://images.unsplash.com/photo-1623676560096-fa1585052898?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Clouds Image"/>
-            <img src="https://images.unsplash.com/photo-1623750340678-4cdf9cbbac53?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Bridge Image"/>
-            <img src="https://images.unsplash.com/photo-1623765178363-cc6423013e17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MjB8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Historical Building Image"/>
-
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1623762959976-61165454a2cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NDB8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Building Picture">
+                        <div class="card-body">
+                            <p class="card-text">Historical Building</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1623766930992-f4951892c929?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MzZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Picture of girl and flowers">
+                        <div class="card-body">
+                            <p class="card-text">Flower Tree</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1623705593182-54c59434cc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MzJ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" class="card-img-top" alt="Picture of the photographer">
+                        <div class="card-body">
+                            <p class="card-text">Photographer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        
     </main>
 
     <footer class="footer">
